<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:background="@drawable/bg">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingTop="12dp"
        android:paddingRight="5dp"
        android:fadeScrollbars="false"
        android:layout_marginRight="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Child's Name"
                android:textColor="#000000"
                android:layout_marginBottom="-15dp"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(This is how Jellow calls you)"
                android:textColor="#000000"
                android:layout_marginBottom="-15dp"
                android:textSize="12dp"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:imeOptions="actionDone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Emergency Contact No."
                android:textColor="#000000"
                android:layout_marginBottom="-15dp"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(To be used for correspondence in case of an emergency involving the child)"
                android:textColor="#000000"
                android:layout_marginBottom="-15dp"
                android:textSize="12dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/etEmergencyContact"
                android:imeOptions="actionDone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email Id"
                android:textColor="#000000"
                android:layout_marginBottom="-15dp"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(To notify you about the release of Jellow updates)"
                android:textColor="#000000"
                android:layout_marginBottom="-15dp"
                android:textSize="12dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:id="@+id/etEmailId"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/bRegister"
                android:text="REGISTER"
                android:layout_width="wrap_content"
                android:height="30dp"
                android:width="180dp"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>