...
    <string name="txtNumOfPerPerScr">Number of category icons per screen</string>
    <string name="txtDemo">SPEECH DEMO</string>
    <string name="txtSave">Save</string>
    <string name="demoTtsSpeech">Hello! you are using Jellow Communicator.</string>
    <string name="savedSettingsMessage">Settings saved.</string>
    <string name="languageChanged">Language Changed</string>
    <string name="checkConnectivity">You are not connected to the Internet. Please turn on your Internet.</string>

    <string name="menuProfile">Profile</string>
    <string name="menuMyBoards">My Boards</string>
    <string name="menuAbout">About Jellow</string>
    <string name="menuTutorials">Tutorial</string>
    <string name="menuKeyboardInput">Keyboard Control</string>
...
    <string name="careGiverContact">Caregiver\'s Contact number other than this device\'s sim number **</string>
    <string name="homeAddress">Home Address **</string>
    <string name="emailAddress">Email Address **</string>
    <string name="bloodGroup">Blood Group **</string>
    <string name="detailSaved">Details saved</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_emailId">Invalid email address</string>
    <string name="enterTheName">Please enter your Child\'s name</string>
    <string name="search_act_title">Search Icons in Jellow</string>

    <string name="iconsHasBeenReset">Preferences have been reset.</string>
    <string name="speak">Speak</string>
    <string name="stop">Stop</string>
    <string name="about_jellow_speech">Jellow is a communicator, using icons to enable speech and can be used by those learning to speak, or those who have difficulty with speech. Jellow can also be used by toddlers and early learners to learn words and categories frequently used in their daily lives. Jellow\'s colourful and friendly icons can help children develop an association between pictures 
...
    <string name="last_crash_reported" translatable="false">com.dsource.idc.jellow.last_crash_reported</string>
    <string name="txt_registration_jellowCalluDesc">(This is how Jellow calls you)</string>
    <string name="txt_registration_emergencynoDesc">(To be used for correspondence in case of an emergency involving the child.)</string>
    <string name="txt_registration_selectLangDesc">Select a Language for Jellow **</string>
    <string name="txt_registration_selectLangDesc_contentDesc">Select a Language for Jellow. Required field. **</string>
    <string name="txt_registration_registerBtn">REGISTER</string>
    <string name="enternonemptycontact">Please enter valid contact number</string>
    <string name="change_language_line5">Step 3: Check if voice data for _ is available on your device. If not please turn on internet and download voice data for selected language. In case process is stalled please check your internet connection and retry</string>
    <string name="txtChangeLanguage">Change Default Language:</string>
    <string name="txtApplyChanges">Step 4: Click \'Apply changes\' to set new language as default</string>
    <string name="txt_actLangSel_downloadDat">Check voice data</string>
    <string name="language_downloaded">_ language downloaded</string>
    <string name="language_downloading">Downloading _ language</string>
...
