...
        android:ems="10"
        android:inputType="textPersonName"
         />
    <RadioGroup
        android:layout_width="@dimen/board_edit_icon_size"
        android:layout_height="wrap_content"
        android:id="@+id/radioParent"
        android:orientation="horizontal"
        android:layout_below="@+id/board_name"
        android:checkedButton="@id/rb_icon"
        android:layout_marginTop="@dimen/edit_board_dialog_internal_margin_top"
        android:layout_marginRight="@dimen/edit_baord_dialog_side_margin"
        android:layout_marginLeft="@dimen/edit_baord_dialog_side_margin"
...
