...
                    android:background="@drawable/edit_board_dialog_edit_text"/>
                <Spinner
                    android:layout_width="@dimen/edit_text_width_add_board"
                    style="@style/spinnerDropDownItemStyle"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edit_baord_dialog_side_margin"
                    android:id="@+id/langSelectSpinner"
                    android:background="@drawable/custom_spinner_view"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
...
